--- a/codebuild/buildspec.yml
+++ b/codebuild/buildspec.yml
@@ -3,8 +3,8 @@ version: 0.2
 env:
   variables:
     JAVA_HOME: "/usr/lib/jvm/java-8-openjdk-amd64"
-  parameter-store:
-    LOGIN_PASSWORD: /CodeBuild/dockerLoginPassword
+#  parameter-store:
+#    LOGIN_PASSWORD: /CodeBuild/dockerLoginPassword
 
 phases:
   install:
@@ -12,6 +12,7 @@ phases:
       - echo Entered the install phase...
       - yum update -y
       - yum install -y maven
+      - echo $PATH
     finally:
       - echo This always runs even if the update or install command fails 
   pre_build:
