--- a/codebuild/buildspec.yml
+++ b/codebuild/buildspec.yml
@@ -33,17 +33,17 @@ phases:
       - echo Entered the post_build phase...
       - echo Build completed on `date`
 
-reports:
-  arn:aws:codebuild:${AWS_REGION}:${CODEBUILD_WEBHOOK_ACTOR_ACCOUNT_ID}:report-group/report-group-name-1:
-    files:
-      - "**/*"
-    base-directory: 'target/tests/reports'
-    discard-paths: no
-  reportGroupCucumberJson:
-    files:
-      - 'cucumber/target/cucumber-tests.xml'
-    discard-paths: yes
-    file-format: CUCUMBERJSON # default is JUNITXML
+#reports:
+#  arn:aws:codebuild:${AWS_REGION}:${CODEBUILD_WEBHOOK_ACTOR_ACCOUNT_ID}:report-group/report-group-name-1:
+#    files:
+#      - "**/*"
+#    base-directory: 'target/tests/reports'
+#    discard-paths: no
+#  reportGroupCucumberJson:
+#    files:
+#      - 'cucumber/target/cucumber-tests.xml'
+#    discard-paths: yes
+#    file-format: CUCUMBERJSON # default is JUNITXML
 artifacts:
   files:
     - target/messageUtil-1.0.jar
