--- a/codebuild/buildspec.yml
+++ b/codebuild/buildspec.yml
@@ -27,6 +27,7 @@ phases:
       - echo Build started on `date`
       - echo mvn install
       - echo hola Armando
+      - aws cloudformation package --template-file hello-world/template.yml --s3-bucket aero-bucket-us-east-1 --output-template post-saml.yaml
     finally:
       - echo This always runs even if the install command fails
   post_build:
@@ -45,9 +46,9 @@ phases:
 #      - 'cucumber/target/cucumber-tests.xml'
 #    discard-paths: yes
 #    file-format: CUCUMBERJSON # default is JUNITXML
-#artifacts:
-#  files:
-#    - target/messageUtil-1.0.jar
+artifacts:
+  files:
+    - post-saml.yaml
 #  discard-paths: yes
 #  secondary-artifacts:
 #    artifact1:
